# launchd-generator

./: README.md  package.json  setup.cfg  setup.py
scripts/: launchd-generator
