# setup.cfg generator: https://pypi.org/project/setupcfg/
[metadata]
name = launchd-generator
version = 2019.03.1
url = https://github.com/looking-for-a-job/launchd-generator
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = launchd generator

[options]
install_requires =
	setuptools
scripts =
	scripts/launchd-generator
